# nicegui-tldraw

./: .gitignore  README.md  demo-nosync.py  demo-sync.py  pyproject.toml
src/nicegui_tldraw/: __init__.py  asset_handlers.py  tldraw.js  tldraw.py  vars.py  version.py
src/nicegui_tldraw/lib/tldraw/: server.js  server.js.map  server.min.js  server.min.js.map  tldraw.min.js  tldraw.min.js.LICENSE.txt
src/tldraw/: package-lock.json  package.json  rooms.js  server.js  test.html  tldraw.js  webpack.config.js
