[project]
name = "nicegui-tldraw"
version = "0.1.0"
description = "NiceGUI wrapper around Tldraw.js"
authors = [{name = "Alex Pilon", email="alex.pilon@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "nicegui>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nicegui_tldraw"]
include = [
    "src/nicegui_tldraw/*.py",
    "src/nicegui_tldraw/*.js",
    "src/nicegui_tldraw/lib/tldraw/*.js",
]
